--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PENGUIN FASHION</title>
+    <link rel="icon" type="image/x-icon" href="images/penguin.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,22 +18,23 @@
 </style>
 
 <body>
+    <!-- NAVBAR -->
     <header class="bg-amber-100 py-20 px-4 md:px-32">
         <nav class=" text-black p-4">
             <div class="flex flex-col md:flex-row md:justify-between items-center container mx-auto">
                 <div class="flex items-center gap-3 mb-4 md:mb-0">
                     <img src="images/image-removebg-preview.png" alt="Logo" height="50" width="50"">
-                    <h3 class="text-3xl font-bold">Penguin</h3>
+                    <h3 class=" text-3xl font-bold">Penguin</h3>
                 </div ">
-                <ul  class="flex flex-col md:flex-row gap-9 text-2xl">
-                    <li><a href="#" class="underline">Home</a></li>
-                    <li><a href="#" >About</a></li>
-                    <li><a href="#" ">Product</a></li>
-                    <li><a href="#" ">Contact</a></li>
+                <ul  class=" flex flex-col md:flex-row gap-9 text-2xl">
+                <li><a href="#" class="underline ">Home</a></li>
+                <li><a href="#" class="hover:text-gray-500">About</a></li>
+                <li><a href="#" class="hover:text-gray-500">Product</a></li>
+                <li><a href="#" class="hover:text-gray-500">Contact</a></li>
                 </ul>
             </div>
         </nav>
-
+        <!-- HEADER -->
         <div class="flex flex-col md:flex-row justify-evenly items-center bg-amber-100">
             <div class="space-y-3">
                 <h1 class="text-7xl uppercase font-bebas ">
@@ -56,20 +58,21 @@
             </div>
         </div>
     </header>
+    <!-- WOMEN JACKETS -->
     <main class="max-w-7xl mx-auto">
         <section class="py-12">
             <h3 class="text-5xl text-slate-800 font-bold">WOMEN JACKETS</h3>
             <br>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pr-9 gap-8">
                 <div class="space-y-3  drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-1.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-1.png" alt="jacket">
+                    </div>
                     <h4 class="2xl  font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$234</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -82,14 +85,14 @@
                     </div>
                 </div>
                 <div class="space-y-3 drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-2.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-2.png" alt="jacket">
+                    </div>
                     <h4 class="2xl font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$300</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -102,14 +105,14 @@
                     </div>
                 </div>
                 <div class="space-y-3 drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-3.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-3.png" alt="jacket">
+                    </div>
                     <h4 class="2xl font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$400</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -124,18 +127,19 @@
                 </div>
             </div>
         </section>
+        <!-- MEN JACKETS -->
         <section class="py-12">
             <h3 class="text-5xl text-slate-800 pb-10 font-bold">MEN JACKETS</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="space-y-3 drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-4.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-4.png" alt="jacket">
+                    </div>
                     <h4 class="2xl  font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$1000</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -148,14 +152,14 @@
                     </div>
                 </div>
                 <div class="space-y-3 drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-5.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-5.png" alt="jacket">
+                    </div>
                     <h4 class="2xl font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$500</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -168,14 +172,14 @@
                     </div>
                 </div>
                 <div class="space-y-3 drop-shadow-lg">
-                   <div class="bg-slate-200 p-5 rounded-3xl">
-                       <img src="images/jacket-6.png" alt="jacket">
-                   </div>
+                    <div class="bg-slate-200 p-5 rounded-3xl">
+                        <img src="images/jacket-6.png" alt="jacket">
+                    </div>
                     <h4 class="2xl font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl">$234</h4>
+                        <h4 class="4xl text-orange-400">$600</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -190,6 +194,7 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER -->
     <footer class="bg-gray-100 py-23 px-20 pt-32">
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <div class="flex flex-col space-y-4 md:w-1/2">
@@ -221,7 +226,7 @@
         </div>
         <div>
             <p class="text-center bg-slate-900 text-white py-2 max-w- 7xl mx-auto">©2020. All rights reserved</p>
-                </div>
+        </div>
     </footer>
 </body>
 
