--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     </header>
     <!-- WOMEN JACKETS -->
     <main class="max-w-7xl mx-auto">
-        <section class="py-12">
+        <section class="py-12 ">
             <h3 class="text-5xl text-slate-800 font-bold">WOMEN JACKETS</h3>
             <br>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pr-9 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pr-9 gap-28">
                 <div class="space-y-3  drop-shadow-lg">
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-1.png" alt="jacket">
@@ -72,7 +72,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$234</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$234</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -92,7 +92,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$300</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$300</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -112,7 +112,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$400</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$400</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -130,7 +130,7 @@
         <!-- MEN JACKETS -->
         <section class="py-12">
             <h3 class="text-5xl text-slate-800 pb-10 font-bold">MEN JACKETS</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-28">
                 <div class="space-y-3 drop-shadow-lg">
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-4.png" alt="jacket">
@@ -139,7 +139,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$1000</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$1000</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -159,7 +159,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$500</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$500</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -179,7 +179,7 @@
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
-                        <h4 class="4xl text-orange-400">$600</h4>
+                        <h4 class="text-3xl text-bold text-orange-400">$600</h4>
                         <button
                             class="py-4 px-9 flex gap-2 rounded-xl bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 ... uppercase text-white font-medium">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div>
-            <p class="text-center bg-slate-900 text-white py-2 max-w- 7xl mx-auto">©2020. All rights reserved</p>
+            <p class="text-center bg-slate-900 text-white py-2 mt-10">©2020. All rights reserved</p>
         </div>
     </footer>
 </body>
