--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PENGUIN FASHION</title>
-    <link rel="icon" type="image/x-icon" href="images/penguin.png">
+    <title>𝘗𝘌𝘕𝘎𝘜𝘐𝘕 𝘍𝘈𝘚𝘏𝘐𝘖𝘕</title>
+    <link rel="icon" type="image/x-icon" href="images/image-removebg-preview.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
