--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-1.png" alt="jacket">
                     </div>
-                    <h4 class="2xl  font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl  font-bold">Yellow coat Jacket</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
@@ -88,7 +88,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-2.png" alt="jacket">
                     </div>
-                    <h4 class="2xl font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl font-bold">Ladies Jacket </h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
@@ -108,7 +108,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-3.png" alt="jacket">
                     </div>
-                    <h4 class="2xl font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl font-bold">Woman Leather Jacket </h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
@@ -135,7 +135,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-4.png" alt="jacket">
                     </div>
-                    <h4 class="2xl  font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl  font-bold">Snowboard Jacket Mens</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
@@ -155,7 +155,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-5.png" alt="jacket">
                     </div>
-                    <h4 class="2xl font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl font-bold">Man Leather Jackets</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
@@ -175,7 +175,7 @@
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-6.png" alt="jacket">
                     </div>
-                    <h4 class="2xl font-bold">Yellow coat Jacket</h4>
+                    <h4 class="text-2xl font-bold">Man Casual Jackets</h4>
                     <p>Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="flex justify-between">
