--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="py-12 ">
             <h3 class="text-5xl text-slate-800 font-bold">WOMEN JACKETS</h3>
             <br>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pr-9 gap-28">
+            <div class="grid grid-cols-1 p-11 md:grid-cols-2  lg:grid-cols-3  gap-28">
                 <div class="space-y-3  drop-shadow-lg">
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-1.png" alt="jacket">
@@ -130,7 +130,7 @@
         <!-- MEN JACKETS -->
         <section class="py-12">
             <h3 class="text-5xl text-slate-800 pb-10 font-bold">MEN JACKETS</h3>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-28">
+            <div class="grid grid-cols-1 p-11 md:grid-cols-2 lg:grid-cols-3 gap-28">
                 <div class="space-y-3 drop-shadow-lg">
                     <div class="bg-slate-200 p-5 rounded-3xl">
                         <img src="images/jacket-4.png" alt="jacket">
